RESOLVED FIXED20634
SVG transform attribute is ignored by <use> in <clipPath>
https://bugs.webkit.org/show_bug.cgi?id=20634
Summary SVG transform attribute is ignored by <use> in <clipPath>
Robert Xiao
Reported 2008-09-03 14:36:03 PDT
If a transform attribute is set on a <path>, and that path is subsequently made into a clipPath by use of the <use> element, the transform attribute is ignored. For example, in the attached document, #crect is transformed to clip the green rect to the entire view box. If the transformation is not applied, #crect lies outside the view box and the red box underneath will be shown. Opera and Firefox both render a green square, but Safari 3.1.2 and r36012 both render a red square.
Attachments
Testcase -- should show a green square (563 bytes, image/svg+xml)
2008-09-03 14:36 PDT, Robert Xiao
no flags
First attempt (10.49 KB, patch)
2008-09-14 04:45 PDT, Rob Buis
eric: review+
Robert Xiao
Comment 1 2008-09-03 14:36:35 PDT
Created attachment 23147 [details] Testcase -- should show a green square
Rob Buis
Comment 2 2008-09-14 04:45:08 PDT
Created attachment 23410 [details] First attempt This patch fixes the problematic testcase. Cheers, Rob.
Eric Seidel (no email)
Comment 3 2008-09-15 14:13:20 PDT
Comment on attachment 23410 [details] First attempt looks ok.
Rob Buis
Comment 4 2008-09-16 04:16:16 PDT
Landed in r36501.
Note You need to log in before you can comment on or make changes to this bug.