        Reviewed by Eric.

https://bugs.webkit.org/show_bug.cgi?id=20634
        SVG transform attribute is ignored by <use> in <clipPath>

        Transform the paths with the local transform when part
        of a clip path.

        Test: svg/custom/use-clipped-transform.svg



Canonical link: https://commits.webkit.org/28790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36501 268f45cc-cd09-0410-ab3c-d52691b4dbfc